--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PDF Viewer</title>
+  <title>Supplemental PDF</title>
+  <style>
+    body { margin: 0; }
+    embed { width: 100vw; height: 100vh; }
+  </style>
 </head>
-<body style="margin:0">
-  <embed src="NeRFCompressor_appendix.pdf" type="application/pdf" width="100%" height="100%" />
+<body>
+  <embed src="supplemental.pdf" type="application/pdf">
 </body>
 </html>
+
