--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <embed src="supplemental.pdf" type="application/pdf">
+  <embed src="NeRFCompressor_appendix.pdf" type="application/pdf">
 </body>
 </html>
 
