--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Supplemental PDF</title>
+  <title>NeRFCompressor Supplemental PDF</title>
   <style>
-    body { margin: 0; }
-    embed { width: 100vw; height: 100vh; }
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+    embed {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
   </style>
 </head>
 <body>
